Skip to content

VLC 2.1.0 wont decode DTS Audio through SPDIF

VLC 2.1.0 wont pass through DTS for output over SPDIF optical to AMP the AMP just receives PCM audio. This feature currently works just fine with VLC 2.0.8 and is also broken in the nightly 2.1.1 build.

I used this file for testing http://dl.demo-world.eu/download_hd.php?filename=hd_dts_animated_logo_lossless.rar

The two primary lines from the debug output that I think are relevant are here VLC 2.0.8 main debug: filter(s) 'dts '->'dts ' 48000 Hz->48000 Hz 3F2R/LFE->3F2R/LFE

VLC 2.1.0 main debug: conversion: 'f32l'->'f32l' 48000 Hz->48000 Hz 3F2R/LFE->Stereo

You can find a text file with a more complete log of both VLC 2.0.8 and 2.1.0 attached

Thanks Chris

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information