Waveout: Fix SPDIF output

Ref #9522